--- a/jekyll/_config.yml
+++ b/jekyll/_config.yml
@@ -30,6 +30,8 @@ markdown: kramdown
 # plugins:
 #   - jekyll-feed
 
+plugins: [jekyll_image_encode]
+
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
