--- a/jekyll/_data/articles.yml
+++ b/jekyll/_data/articles.yml
@@ -1,6 +1,14 @@
 - publication: "Linux Magazin"
   publication_url: http://www.linux-magazin.de
   publisher: Computec Media GmbH
+  issue_number: "10/2017"
+  title: "Heißer Vogel - Phoenix 1.3"
+  article_url: http://www.linux-magazin.de/Ausgaben/2017/10
+  tags:
+    - Phoenix
+- publication: "Linux Magazin"
+  publication_url: http://www.linux-magazin.de
+  publisher: Computec Media GmbH
   issue_number: "6/2017"
   title: "Neue Version 5.1 von Ruby on Rails"
   article_url: http://www.linux-magazin.de/Ausgaben/2017/06/Ruby-on-Rails
