WebPerformance Blog Posting

--- a/jekyll/_config.yml
+++ b/jekyll/_config.yml
@@ -20,7 +20,7 @@ description: > # this means to ignore newlines until "baseurl:"
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://www.wintermeyer-consulting.de" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: wintermeyer
 github_username:  wintermeyer
 phone_number_i18n: +49-261-9886803
@@ -29,9 +29,10 @@ google_analytics: UA-105083688-1
 
 # Build settings
 markdown: kramdown
-# theme: minima
-# plugins:
-#   - jekyll-feed
+theme: minima
+plugins:
+  - jekyll-feed
+permalink: /blog/:year/:month/:day/:title.html
 
 plugins: [jekyll_image_encode]
 
