--- a/jekyll/_config.yml
+++ b/jekyll/_config.yml
@@ -16,9 +16,7 @@
 title: Wintermeyer Consulting
 email: sw@wintermeyer-consulting.de
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Wintermeyer Consulting. Butter und Brot: Ruby on Rails, Phoenix und WebPerformance. Ansonsten: Jekyll und CouchDB.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://www.wintermeyer-consulting.de" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: wintermeyer
