Fixes URL for Phoenix Linux Magazin article.

--- a/jekyll/_data/articles.yml
+++ b/jekyll/_data/articles.yml
@@ -3,7 +3,7 @@
   publisher: Computec Media GmbH
   issue_number: "10/2017"
   title: "Heißer Vogel - Phoenix 1.3"
-  article_url: http://www.linux-magazin.de/Ausgaben/2017/10
+  article_url: http://www.linux-magazin.de/Ausgaben/2017/10/Phoenix-1.3
   tags:
     - Phoenix
 - publication: "Linux Magazin"
