--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.0",
+    "@tailwindcss/forms": "^0.5.1",
     "autoprefixer": "^10.4.7",
     "cssnano": "^5.1.7",
     "postcss": "^8.4.13",
